  syntax = "proto3";
  
  package monitoring;
  
  option go_package = "github.com/sairamkiran9/asset-telemetry-monitor/gen/go/monitoring";
  
  import "google/protobuf/timestamp.proto";
  
  service MonitoringService {
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
    rpc GetMetrics(GetMetricsRequest) returns (stream MetricsResponse);
  }
  
  enum HealthStatus {
    UNKNOWN = 0;
    HEALTHY = 1;
    DEGRADED = 2;
    UNHEALTHY = 3;
  }
  
  message HealthCheckRequest {
    string service_name = 1;
  }
  
  message HealthCheckResponse {
    string service_name = 1;
    HealthStatus status = 2;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
    map<string, string> details = 5;
  }
  
  message GetMetricsRequest {
    repeated string metric_names = 1;
    int32 interval_seconds = 2;
  }
  
  message MetricsResponse {
    string metric_name = 1;
    double value = 2;
    google.protobuf.Timestamp timestamp = 3;
    map<string, string> labels = 4;
  }